Base/Minecraft/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      containers:
      - name: minecraft-server
        image: itzg/minecraft-server:latest
        ports:
        - name: minecraft
          containerPort: 25565
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 3Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: minecraft-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: local-path
      volumeMode: Filesystem
    status:
      phase: Pending
  serviceName: minecraft-server
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
