Base/Minecraft/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server
spec:
  ports:
  - name: minecraft
    protocol: TCP
    port: 25565
    targetPort: 25565
    nodePort: 30077
  selector:
    app: minecraft-server
  type: NodePort
